feat [stats]: add stats like first feature
